<resources>
    <string name="app_name">My Application</string>
    <string name="total_amount">Total Amount</string>
    <string name="tax_amount">Tax Amount</string>
    <string name="tip_percentage">Tip?</string>
    <string name="twenty">20%</string>
    <string name="ten">10%</string>
    <string name="five">5%</string>
    <string name="zero">0%</string>
    <string name="tip_amount">Tip Amount:</string>
    <string name="tip_amount_displayed">$0.00</string>
    <string name="calculate">Calculate</string>
    <string name="cancel">Clear</string>
    <string name="grand_total">Grand Total:</string>
    <string name="grand_total_displayed">$0.00</string>

</resources>